add CID all associated operations(BIG WORK )
